--- a/src/newsite/index.html
+++ b/src/newsite/index.html
@@ -1,4 +1,3 @@
-<base href="https://thegivehub.com/site/"/>
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -9,7 +8,7 @@
         <meta content="description" name="The Give Hub is a blockchain backed crowdfunding platform designed to make running campaigns and donating simple and easy to use.">
 
         <!-- Favicon -->
-        <link href="img/favicon.ico" type="image/svg+xml" rel="icon">
+        <link href="/site/img/favicon.ico" type="image/svg+xml" rel="icon">
 
         <!-- Google Font -->
         <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -17,12 +16,12 @@
         <!-- CSS Libraries -->
         <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
-        <link href="lib/flaticon/font/flaticon.css" rel="stylesheet">
-        <link href="lib/animate/animate.min.css" rel="stylesheet">
-        <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+        <link href="/site/lib/flaticon/font/flaticon.css" rel="stylesheet">
+        <link href="/site/lib/animate/animate.min.css" rel="stylesheet">
+        <link href="/site/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
 
         <!-- Template Stylesheet -->
-        <link href="css/style.css" rel="stylesheet">
+        <link href="/site/css/style.css" rel="stylesheet">
     </head>
 
     <body>
@@ -801,7 +800,87 @@
             </div>
         </div>
         <!-- Contact End -->
-        <!-- Footer Start -->
+        <!-- Blog Start -->
+        <div class="blog">
+            <div class="container">
+                <div class="section-header text-center">
+                    <p>Our Blog</p>
+                    <h2>Latest news & articles directly from our blog</h2>
+                </div>
+                <div class="row">                    <div class="col-lg-4">
+                        <div class="blog-item">
+                            <div class="blog-img">
+                                <img src="/site/img/blog-2.jpg" alt="Image">
+                            </div>
+                            <div class="blog-text">
+                                <h2><a href="/site/blog/unbanked-billion.html">Unbanked Billions</a></h2>
+                                <h3><a href="/site/blog/unbanked-billion.html">Why Traditional Aid Isn't Reaching Remote Regions</a></h3>
+                                <p>
+                                    <p>In the highlands of Ecuador, Elena’s farming community needed just
+$2,000 for irrigation equipment that could double their crop yield.
+Traditional aid organizations had millions earmarked for agricultural
+development, yet none reached Elena’s village. This story repeats across
+the globe, where an estimated 1.4 billion adults remain unbanked and
+often unreached by traditional aid. But why does this disconnect
+persist, and how can we bridge this critical gap?</p>
+                                </p>
+                            </div>
+                            <div class="blog-meta">
+                                <p><i class="fa fa-user"></i><a href="#">Chris</a></p>
+                                <p><i class="fa fa-comments"></i><a href="#">0 Comments</a></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="blog-item">
+                            <div class="blog-img">
+                                <img src="/site/img/blog-19.jpg" alt="Image">
+                            </div>
+                            <div class="blog-text">
+                                <h2><a href="/site/blog/inclusion.html">Financial Inclusion in Action</a></h2>
+                                <h3><a href="/site/blog/inclusion.html"> Real Stories from The Last Mile of Giving</a></h3>
+                                <p>
+                                    <p>In the remote mountains of Peru, Rosa used to walk six hours to
+collect funds sent by family in Lima. Today, she simply checks her
+phone, confirms the transfer, and buys supplies for her store using her
+digital wallet. This shift marks a revolution in financial inclusion—one
+that brings technology, trust, and community together to reach the last
+mile of global giving.</p>
+                                </p>
+                            </div>
+                            <div class="blog-meta">
+                                <p><i class="fa fa-user"></i><a href="#">Chris</a></p>
+                                <p><i class="fa fa-comments"></i><a href="#">0 Comments</a></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="blog-item">
+                            <div class="blog-img">
+                                <img src="/site/img/blog-18.jpg" alt="Image">
+                            </div>
+                            <div class="blog-text">
+                                <h2><a href="/site/blog/trust-through-technology.html">Trust Through Technology</a></h2>
+                                <h3><a href="/site/blog/trust-through-technology.html"> Building Credible Charity Platforms for the Digital Age</a></h3>
+                                <p>
+                                    <p>When a donor in New York sends $100 to support a school in rural
+Ethiopia, how do they know their money is making an impact? Modern
+technology isn’t just making giving easier – it’s revolutionizing how we
+build and verify trust in charitable giving. Here’s how blockchain,
+smart contracts, and digital verification are creating unprecedented
+transparency in philanthropy.</p>
+                                </p>
+                            </div>
+                            <div class="blog-meta">
+                                <p><i class="fa fa-user"></i><a href="#">Chris</a></p>
+                                <p><i class="fa fa-comments"></i><a href="#">0 Comments</a></p>
+                            </div>
+                        </div>
+                    </div>
+ </div>
+            </div>
+        </div>
+        <!-- Blog End -->        <!-- Footer Start -->
         <div class="footer">
             <div class="container">
                 <div class="row">
@@ -877,17 +956,17 @@
         <!-- JavaScript Libraries -->
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
-        <script src="lib/easing/easing.min.js"></script>
-        <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-        <script src="lib/waypoints/waypoints.min.js"></script>
-        <script src="lib/counterup/counterup.min.js"></script>
-        <script src="lib/parallax/parallax.min.js"></script>
+        <script src="/site/lib/easing/easing.min.js"></script>
+        <script src="/site/lib/owlcarousel/owl.carousel.min.js"></script>
+        <script src="/site/lib/waypoints/waypoints.min.js"></script>
+        <script src="/site/lib/counterup/counterup.min.js"></script>
+        <script src="/site/lib/parallax/parallax.min.js"></script>
         
         <!-- Contact Javascript File -->
-        <script src="mail/jqBootstrapValidation.min.js"></script>
-        <script src="mail/contact.js"></script>
+        <script src="/site/mail/jqBootstrapValidation.min.js"></script>
+        <script src="/site/mail/contact.js"></script>
 
         <!-- Template Javascript -->
-        <script src="js/main.js"></script>
+        <script src="/site/js/main.js"></script>
     </body>
 </html>
