Updates to admin app / misc content updates

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta content="description" name="The Give Hub is a blockchain backed crowdfunding platform designed to make running campaigns and donating simple and easy to use.">
 
         <!-- Favicon -->
-        <link href="/site/img/favicon.svg" type="image/svg+xml" rel="icon">
+        <link href="/img/favicon.svg" type="image/svg+xml" rel="icon">
 
         <!-- Google Font -->
         <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -50,7 +50,7 @@
                                 <a href="https://linkedin.com/company/thegivehub"><i class="fab fa-linkedin-in"></i></a>
                             </div>
                             <div class="lang">
-                                <a href="/es/"><img class="lang-icon" src="/site/img/hola.svg"></a>
+                                <a onclick="app.switchLang('es'); return false;" href="/es/"><img class="lang-icon" src="/site/img/hola.svg"></a>
                             </div>
  
                         </div>
@@ -844,19 +844,23 @@
                 <div class="row">                    <div class="col-lg-4">
                         <div class="blog-item">
                             <div class="blog-img">
-                                <img src="/site/img/blog-2.jpg" alt="Image">
+                                <img src="/img/blog-20.jpg" alt="Image">
                             </div>
                             <div class="blog-text">
-                                <h2><a href="/site/blog/unbanked-billion.html">Unbanked Billions</a></h2>
-                                <h3><a href="/site/blog/unbanked-billion.html">Why Traditional Aid Isn't Reaching Remote Regions</a></h3>
+                                <h2><a href="/es/blog/unbanked-billion.html">Los Mil Millones No Bancarizados</a></h2>
+                                <h3><a href="/es/blog/unbanked-billion.html"> Por Qué la Ayuda Tradicional No Llega a las Regiones Remotas (Y Cómo lo Estamos Cambiando)</a></h3>
                                 <p>
-                                    <p>In the highlands of Ecuador, Elena’s farming community needed just
-$2,000 for irrigation equipment that could double their crop yield.
-Traditional aid organizations had millions earmarked for agricultural
-development, yet none reached Elena’s village. This story repeats across
-the globe, where an estimated 1.4 billion adults remain unbanked and
-often unreached by traditional aid. But why does this disconnect
-persist, and how can we bridge this critical gap?</p>
+                                    <p>En las tierras altas de Ecuador, la comunidad agrícola de Elena
+enfrenta un desafío importante: necesitan solo $2,000 para instalar un
+sistema de riego que podría duplicar su producción de cultivos. Las
+organizaciones de ayuda tradicional han destinado millones al desarrollo
+agrícola, pero esos fondos a menudo no llegan a aldeas como la de Elena.
+A nivel mundial, se estima que 1.400 millones de adultos siguen sin
+acceso a servicios bancarios y, a menudo, no son alcanzados por la ayuda
+tradicional. Esto no se debe a la falta de financiamiento o intención,
+sino a barreras sistémicas y logísticas que impiden que la ayuda llegue
+de manera efectiva a quienes más la necesitan. ¿Por qué existe esta
+brecha y cómo podemos cambiarla?</p>
                                 </p>
                             </div>
                             <div class="blog-meta">
@@ -868,18 +872,18 @@ persist, and how can we bridge this critical gap?</p>
                     <div class="col-lg-4">
                         <div class="blog-item">
                             <div class="blog-img">
-                                <img src="/site/img/blog-19.jpg" alt="Image">
+                                <img src="/img/blog-19.jpg" alt="Image">
                             </div>
                             <div class="blog-text">
-                                <h2><a href="/site/blog/inclusion.html">Financial Inclusion in Action</a></h2>
-                                <h3><a href="/site/blog/inclusion.html"> Real Stories from The Last Mile of Giving</a></h3>
+                                <h2><a href="/es/blog/inclusion.html">Inclusión Financiera en Acción</a></h2>
+                                <h3><a href="/es/blog/inclusion.html"> Historias Reales desde la Última Milla de las Donaciones</a></h3>
                                 <p>
-                                    <p>In the remote mountains of Peru, Rosa used to walk six hours to
-collect funds sent by family in Lima. Today, she simply checks her
-phone, confirms the transfer, and buys supplies for her store using her
-digital wallet. This shift marks a revolution in financial inclusion—one
-that brings technology, trust, and community together to reach the last
-mile of global giving.</p>
+                                    <p>En las montañas remotas de Perú, Rosa solía caminar seis horas para
+recoger fondos enviados por su familia en Lima. Hoy, simplemente revisa
+su teléfono, confirma la transferencia y compra suministros para su
+tienda usando su billetera digital. Este cambio marca una revolución en
+la inclusión financiera, una que une tecnología, confianza y comunidad
+para llegar al último kilómetro de la donación global.</p>
                                 </p>
                             </div>
                             <div class="blog-meta">
@@ -891,18 +895,20 @@ mile of global giving.</p>
                     <div class="col-lg-4">
                         <div class="blog-item">
                             <div class="blog-img">
-                                <img src="/site/img/blog-18.jpg" alt="Image">
+                                <img src="/img/blog-18.jpg" alt="Image">
                             </div>
                             <div class="blog-text">
-                                <h2><a href="/site/blog/trust-through-technology.html">Trust Through Technology</a></h2>
-                                <h3><a href="/site/blog/trust-through-technology.html"> Building Credible Charity Platforms for the Digital Age</a></h3>
+                                <h2><a href="/es/blog/trust-through-technology.html">Confianza a Través de la Tecnología</a></h2>
+                                <h3><a href="/es/blog/trust-through-technology.html"> Construyendo Plataformas de Caridad Confiables para la Era Digital</a></h3>
                                 <p>
-                                    <p>When a donor in New York sends $100 to support a school in rural
-Ethiopia, how do they know their money is making an impact? Modern
-technology isn’t just making giving easier – it’s revolutionizing how we
-build and verify trust in charitable giving. Here’s how blockchain,
-smart contracts, and digital verification are creating unprecedented
-transparency in philanthropy.</p>
+                                    <p>Imagina a un donante en Nueva York enviando $100 para apoyar una
+escuela en una zona rural de Etiopía. ¿Cómo puede estar seguro de que su
+dinero realmente está generando un impacto? Hoy en día, la tecnología no
+solo simplifica el acto de donar, sino que también está transformando la
+manera en que se construye y verifica la confianza en las donaciones. A
+través de blockchain, contratos inteligentes y verificación digital, la
+transparencia en la filantropía está alcanzando niveles sin
+precedentes.</p>
                                 </p>
                             </div>
                             <div class="blog-meta">
@@ -925,12 +931,15 @@ transparency in philanthropy.</p>
                             <p><i class="fa fa-phone-alt"></i>(415) 300-0180</p>
                             <p><i class="fa fa-envelope"></i>info@thegivehub.com</p>
                             <div class="footer-social">
-                                <a class="btn btn-custom" href="https://twitter.com/thegivehub"><i class="fab fa-twitter"></i></a>
+                                <a class="btn btn-custom" href="https://twitter.com/thegivehub97501"><i class="fab fa-twitter"></i></a>
                                 <a class="btn btn-custom" href="https://www.facebook.com/people/The-Give-Hub/61568306136450/"><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-custom" href="https://youtube.com/@thegivehub"><i class="fab fa-youtube"></i></a>
-                                <a class="btn btn-custom" href="https://www.instagram.com/the_givehub/"><i class="fab fa-instagram"></i></a>
                                 <a class="btn btn-custom" href="https://linkedin.com/company/thegivehub"><i class="fab fa-linkedin-in"></i></a>
                             </div>
+                            <div class="lang">
+                                <a onclick="app.switchLang('es'); return false;" href="/es/"><img class="lang-icon" src="/site/img/hola.svg"></a>
+                            </div>
+ 
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
@@ -990,17 +999,17 @@ transparency in philanthropy.</p>
         <!-- JavaScript Libraries -->
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
-        <script src="/site/lib/easing/easing.min.js"></script>
-        <script src="/site/lib/owlcarousel/owl.carousel.min.js"></script>
-        <script src="/site/lib/waypoints/waypoints.min.js"></script>
-        <script src="/site/lib/counterup/counterup.min.js"></script>
-        <script src="/site/lib/parallax/parallax.min.js"></script>
+        <script src="/lib/easing/easing.min.js"></script>
+        <script src="/lib/owlcarousel/owl.carousel.min.js"></script>
+        <script src="/lib/waypoints/waypoints.min.js"></script>
+        <script src="/lib/counterup/counterup.min.js"></script>
+        <script src="/lib/parallax/parallax.min.js"></script>
         
         <!-- Contact Javascript File -->
-        <script src="/site/mail/jqBootstrapValidation.min.js"></script>
-        <script src="/site/mail/contact.js"></script>
+        <script src="/mail/jqBootstrapValidation.min.js"></script>
+        <script src="/mail/contact.js"></script>
 
         <!-- Template Javascript -->
-        <script src="/site/js/main.js"></script>
+        <script src="/js/main.js"></script>
     </body>
 </html>
