--- a/src/en/newsite/service.html
+++ b/src/en/newsite/service.html
@@ -404,15 +404,9 @@
         </div>
 
         <!-- JavaScript Libraries -->
-        <script src="/js/jquery-3.4.1.min.js"></script>
-        <script src="/lib/fontawesome/js/all.min.js"></script>
-        <script src="/js/bootstrap.bundle.min.js"></script>
-        <script src="/lib/easing/easing.min.js"></script>
-        <script src="/lib/owlcarousel/owl.carousel.min.js"></script>
-        <script src="/lib/waypoints/waypoints.min.js"></script>
-        <script src="/lib/counterup/counterup.min.js"></script>
-        <script src="/lib/parallax/parallax.min.js"></script>
-        
+        <script src="/js/all.bundle.min.js"></script>
+        <script src="https://raw.githubusercontent.com/dallaslu/bootstrap-5-multi-level-dropdown/master/bootstrap5-dropdown-ml-hack.js"></script>
+
         <!-- Contact Javascript File -->
         <script src="/mail/jqBootstrapValidation.min.js"></script>
         <script src="/mail/contact.js"></script>
