--- a/src/en/newsite/contact.html
+++ b/src/en/newsite/contact.html
@@ -63,7 +63,7 @@
         <!-- Nav Bar Start -->
         <div class="navbar navbar-expand-lg bg-dark navbar-dark">
             <div class="container-fluid">
-                <a href="index.html" class="navbar-brand">The Give Hub</a>
+                <a href="index.html" class="navbar-brand"><img src="/img/favicon.svg" height="50"> The Give Hub</a>
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -126,33 +126,34 @@
         </div>
         <!-- Page Header End -->
         <!-- Contact Start -->
-        <div class="contact">
+        <div class="contact" data-parallax="scroll" data-image-src="/img/african-kids.jpg">
             <div class="container">
                 <div class="section-header text-center">
                     <p>Get In Touch</p>
                     <h2>Contact us for any questions!</h2>
                 </div>
-                <div class="contact-img">
+                <div class="contact-img" style="display:none">
                     <img src="/site/img/contact.jpg" alt="Image">
                 </div>
                 <div class="contact-form">
                         Complete the form below and hit the 'Send Message' button to send us a message.
                         <div id="success"></div>
-                        <form name="sentMessage" id="contactForm" novalidate="novalidate">
+                        <form action="/api.php" name="sentMessage" id="contactForm" method="POST" novalidate="novalidate">
+                            <input type="hidden" name="form_type" value="contact">
                             <div class="control-group">
-                                <input type="text" class="form-control" id="name" placeholder="Your Name" required="required" data-validation-required-message="Please enter your name" />
+                                <input type="text" class="form-control" name="name" id="name" placeholder="Your Name" required="required" data-validation-required-message="Please enter your name" />
                                 <p class="help-block text-danger"></p>
                             </div>
                             <div class="control-group">
-                                <input type="email" class="form-control" id="email" placeholder="Your Email" required="required" data-validation-required-message="Please enter your email" />
+                                <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required="required" data-validation-required-message="Please enter your email" />
                                 <p class="help-block text-danger"></p>
                             </div>
                             <div class="control-group">
-                                <input type="text" class="form-control" id="subject" placeholder="Subject" required="required" data-validation-required-message="Please enter a subject" />
+                                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required="required" data-validation-required-message="Please enter a subject" />
                                 <p class="help-block text-danger"></p>
                             </div>
                             <div class="control-group">
-                                <textarea class="form-control" id="message" placeholder="Message" required="required" data-validation-required-message="Please enter your message"></textarea>
+                                <textarea class="form-control" id="message" name="message" placeholder="Message" required="required" data-validation-required-message="Please enter your message"></textarea>
                                 <p class="help-block text-danger"></p>
                             </div>
                             <div>
@@ -204,8 +205,9 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="footer-newsletter">
                             <h2>Newsletter</h2>
-                            <form>
-                                <input class="form-control" placeholder="Email goes here">
+                            <form action="/api.php" method="POST">
+                                <input type="hidden" name="form_type" value="newsletter">
+                                <input class="form-control" name="email" id="newsletter_email" placeholder="Email goes here">
                                 <button class="btn btn-custom">Submit</button>
                                 <label>Don't worry, we don't spam!</label>
                             </form>
@@ -217,9 +219,7 @@
             <div class="container copyright">
                 <div class="row">
                     <div class="col-md-6">
-                   </div>
-                    <div class="col-md-6">
-                        <p>&copy; <a href="#">The Give Hub</a>, All Right Reserved.</p>
+                        <p>&copy; 2025 <a href="#">The Give Hub</a>, All Right Reserved.</p>
                     </div>
                     <div class="col-md-6">
                     </div>
