--- a/src/en/newsite/fred-email.html
+++ b/src/en/newsite/fred-email.html
@@ -115,67 +115,62 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h2>Donate</h2>
+                        <h2>From: Fred Rodriguez <fred@fastfreddierodriguez.com>  </h2>
                     </div>
                     <div class="col-12">
                         <a href="">Home</a>
-                        <a href="">Donate</a>
+                        <a href="">From: Fred Rodriguez <fred@fastfreddierodriguez.com>  </a>
                     </div>
                 </div>
             </div>
         </div>
         <!-- Page Header End -->
-        <!-- Donate Start -->
-        <div class="donate" data-parallax="scroll" data-image-src="/site/img/donate.jpg">
-            <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-lg-7">
-                        <div class="donate-content">
-                            <div class="section-header">
-                                <p>Donate Now</p>
-                                <h2>Your Gift, Their Future.</h2>
-                            </div>
-                            <div class="donate-text">
-                                <p>
-                                    Your generous donation will directly support impactful projects that empower underserved communities around the world. By contributing through The Give Hub, you're helping to provide essential resources like clean water, healthcare, education, and more to those who need it most. Together, we can break down barriers and bring lasting change to people who have traditionally lacked access to global financial services. Thank you for being a part of this transformative journey! 
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-5">
-                        <div class="donate-form">
-                            <form action="/api.php" method="POST" onsubmit="return app.donate(event)">
-                                <input type="hidden" name="form_type" value="donor">
-                                <div class="control-group">
-                                    <input type="text" class="form-control" id="name" name="name" placeholder="Name" required="required" />
-                                </div>
-                                <div class="control-group">
-                                    <input type="email" class="form-control" id="email" name="email" placeholder="Email" required="required" />
-                                </div>
-                                <div class="btn-group btn-group-toggle" data-toggle="buttons">
-                                    <label class="btn btn-custom active">
-                                        <input type="radio" name="amount" checked> $10
-                                    </label>
-                                    <label class="btn btn-custom">
-                                        <input type="radio" name="amount"> $20
-                                    </label>
-                                    <label class="btn btn-custom">
-                                        <input type="radio" name="amount"> $30
-                                    </label>
-                                </div>
-                                <div>
-                                    <button class="btn btn-custom" type="submit">Donate Now</button>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
+<div class="container">
+    <div class="row align-items-center" style="justify-content: center;">
+        <div class="col-lg-7">
+            <div class="my-content"><p>From: Fred Rodriguez <a href="mailto:fred@fastfreddierodriguez.com"
+class="email">fred@fastfreddierodriguez.com</a><br />
+To: Katherine Rodriguez <a href="mailto:kathy@thegivehub.com"
+class="email">kathy@thegivehub.com</a><br />
+Subject: Excited to Support The Give Hub!</p>
+<p>Hi Sis</p>
+<p>I just wanted to say how incredibly proud I am of you for starting
+The Give Hub.<br />
+It’s amazing to see you taking action to make the world a better place,
+and it’s<br />
+truly inspiring. You’ve always had such a big heart, and now you’re
+channeling<br />
+that energy into something that will create real change for so many
+communities.</p>
+<p>I’m 100% onboard to support you as a celebrity spokesperson. This
+mission is<br />
+something I’m happy to put my name behind, and I’ll do everything I can
+to help<br />
+spread the word. What you’re doing aligns perfectly with my values and
+my belief<br />
+in helping others rise up and succeed.</p>
+<p>I also heard about the Stellar Development Foundation Community Grant
+you’re<br />
+applying for. If you’re awarded the grant, you can count on me to match
+whatever<br />
+funding they provide. Let’s make sure this project gets the resources it
+needs to<br />
+thrive.</p>
+<p>There’s still a lot we need to discuss—from how you’d like to use my
+endorsement<br />
+to other ways I can get involved. Let’s schedule a time soon to chat
+through<br />
+the details and figure out the best way for me to help you make this a
+success.</p>
+<p>Love you lots and can’t wait to see where this goes. You’re doing
+something<br />
+truly extraordinary, and I’m honored to be a part of it.</p>
+<p>Talk soon,<br />
+Fred</p>
             </div>
         </div>
-        <!-- Donate End -->
-        
-
-        <!-- Footer Start -->
+    </div>
+</div>        <!-- Footer Start -->
         <div class="footer">
             <div class="container">
                 <div class="row">
