--- a/src/en/newsite/index.html
+++ b/src/en/newsite/index.html
@@ -63,7 +63,7 @@
         <!-- Nav Bar Start -->
         <div class="navbar navbar-expand-lg bg-dark navbar-dark">
             <div class="container-fluid">
-                <a href="index.html" class="navbar-brand">The Give Hub</a>
+                <a href="index.html" class="navbar-brand"><img src="/img/favicon.svg" height="50"> The Give Hub</a>
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -175,7 +175,10 @@
                         </button>        
                         <!-- 16:9 aspect ratio -->
                         <div class="embed-responsive embed-responsive-16by9">
-                            <iframe class="embed-responsive-item" id="video" width="560" height="315" src="https://www.youtube.com/embed/eOjkoQqnWAw?si=_XHTnUfk1QZiJkz8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            <video controls width="560" height="315" autoplay >
+                                <source src="/img/givehub-revolution.mp4" type="video/mp4" />
+                                Download the <a href="/media/cc0-videos/flower.mp4">MP4</a> video.
+                            </video>
                         </div>
                     </div>
                 </div>
@@ -497,22 +500,23 @@
                     </div>
                     <div class="col-lg-5">
                         <div class="donate-form">
-                            <form>
+                            <form action="/api.php" method="POST" onsubmit="return app.donate(event)">
+                                <input type="hidden" name="form_type" value="donor">
                                 <div class="control-group">
-                                    <input type="text" class="form-control" placeholder="Name" required="required" />
+                                    <input type="text" class="form-control" id="name" name="name" placeholder="Name" required="required" />
                                 </div>
                                 <div class="control-group">
-                                    <input type="email" class="form-control" placeholder="Email" required="required" />
+                                    <input type="email" class="form-control" id="email" name="email" placeholder="Email" required="required" />
                                 </div>
                                 <div class="btn-group btn-group-toggle" data-toggle="buttons">
                                     <label class="btn btn-custom active">
-                                        <input type="radio" name="options" checked> $10
+                                        <input type="radio" name="amount" checked> $10
                                     </label>
                                     <label class="btn btn-custom">
-                                        <input type="radio" name="options"> $20
+                                        <input type="radio" name="amount"> $20
                                     </label>
                                     <label class="btn btn-custom">
-                                        <input type="radio" name="options"> $30
+                                        <input type="radio" name="amount"> $30
                                     </label>
                                 </div>
                                 <div>
@@ -580,7 +584,7 @@
 
 
         <!-- Team Start -->
-        <div class="team">
+        <div class="team" data-parallax="scroll" data-image-src="/img/valley.jpg" >
             <div class="container">
                 <div class="section-header text-center">
                     <p>Meet Our Team</p>
@@ -746,15 +750,16 @@
                 <div class="row align-items-center">
                     <div class="col-lg-5">
                         <div class="volunteer-form">
-                            <form>
+                            <form action="/api.php" method="POST" onsubmit="return app.volunteer()">
+                                <input type="hidden" name="form_type" value="volunteer">
                                 <div class="control-group">
-                                    <input type="text" class="form-control" placeholder="Name" required="required" />
+                                    <input type="text" class="form-control" id="name" name="name" placeholder="Name" required="required" />
                                 </div>
                                 <div class="control-group">
-                                    <input type="email" class="form-control" placeholder="Email" required="required" />
+                                    <input type="email" class="form-control" id="email" name="email" placeholder="Email" required="required" />
                                 </div>
                                 <div class="control-group">
-                                    <textarea class="form-control" placeholder="Why you want to become a volunteer?" required="required"></textarea>
+                                    <textarea class="form-control" id="message" name="message" placeholder="Why you want to become a volunteer?" required="required"></textarea>
                                 </div>
                                 <div>
                                     <button class="btn btn-custom" type="submit">Become a volunteer</button>
@@ -879,33 +884,34 @@
         <!-- Testimonial End -->
         
         <!-- Contact Start -->
-        <div class="contact">
+        <div class="contact" data-parallax="scroll" data-image-src="/img/african-kids.jpg">
             <div class="container">
                 <div class="section-header text-center">
                     <p>Get In Touch</p>
                     <h2>Contact us for any questions!</h2>
                 </div>
-                <div class="contact-img">
+                <div class="contact-img" style="display:none">
                     <img src="/site/img/contact.jpg" alt="Image">
                 </div>
                 <div class="contact-form">
                         Complete the form below and hit the 'Send Message' button to send us a message.
                         <div id="success"></div>
-                        <form name="sentMessage" id="contactForm" novalidate="novalidate">
+                        <form action="/api.php" name="sentMessage" id="contactForm" method="POST" novalidate="novalidate">
+                            <input type="hidden" name="form_type" value="contact">
                             <div class="control-group">
-                                <input type="text" class="form-control" id="name" placeholder="Your Name" required="required" data-validation-required-message="Please enter your name" />
+                                <input type="text" class="form-control" name="name" id="name" placeholder="Your Name" required="required" data-validation-required-message="Please enter your name" />
                                 <p class="help-block text-danger"></p>
                             </div>
                             <div class="control-group">
-                                <input type="email" class="form-control" id="email" placeholder="Your Email" required="required" data-validation-required-message="Please enter your email" />
+                                <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required="required" data-validation-required-message="Please enter your email" />
                                 <p class="help-block text-danger"></p>
                             </div>
                             <div class="control-group">
-                                <input type="text" class="form-control" id="subject" placeholder="Subject" required="required" data-validation-required-message="Please enter a subject" />
+                                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required="required" data-validation-required-message="Please enter a subject" />
                                 <p class="help-block text-danger"></p>
                             </div>
                             <div class="control-group">
-                                <textarea class="form-control" id="message" placeholder="Message" required="required" data-validation-required-message="Please enter your message"></textarea>
+                                <textarea class="form-control" id="message" name="message" placeholder="Message" required="required" data-validation-required-message="Please enter your message"></textarea>
                                 <p class="help-block text-danger"></p>
                             </div>
                             <div>
@@ -957,8 +963,9 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="footer-newsletter">
                             <h2>Newsletter</h2>
-                            <form>
-                                <input class="form-control" placeholder="Email goes here">
+                            <form action="/api.php" method="POST">
+                                <input type="hidden" name="form_type" value="newsletter">
+                                <input class="form-control" name="email" id="newsletter_email" placeholder="Email goes here">
                                 <button class="btn btn-custom">Submit</button>
                                 <label>Don't worry, we don't spam!</label>
                             </form>
@@ -970,9 +977,7 @@
             <div class="container copyright">
                 <div class="row">
                     <div class="col-md-6">
-                   </div>
-                    <div class="col-md-6">
-                        <p>&copy; <a href="#">The Give Hub</a>, All Right Reserved.</p>
+                        <p>&copy; 2025 <a href="#">The Give Hub</a>, All Right Reserved.</p>
                     </div>
                     <div class="col-md-6">
                     </div>
